fixed alignment issues

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -110,6 +110,8 @@
 
     .projects-content h4 {
         font-size: 1.6em;
+        text-align: center;
+        margin-bottom: 3rem;
     }
 
     .projects-item h5 {
